--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     
     <section>
         <div id="UwU" class="center-choice ">
-            <div>
-                <img src="img/charmander.png" alt="charmander">
+            <div id="deletpls"> 
+                <img src="img/0.png" alt="charmander">
                 <button  class="choice" onclick="playerChoice(0)">Charmander</button>
                 <img src="img/pikachu.png" alt="pikachu">
                 <button class="choice" onclick="playerChoice(1)">Pikachu</button>
