Roses are red I want to be dead

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <section>
         <div id="UwU" class="center-choice ">
             <div id="deletpls"> 
-                <img src="img/0.png" alt="charmander">
-                <button  class="choice" onclick="playerChoice(0)">Charmander</button>
-                <img src="img/pikachu.png" alt="pikachu">
-                <button class="choice" onclick="playerChoice(1)">Pikachu</button>
-                <img src="img/squirtle.png" alt="squirtle">
-                <button class="choice" onclick="playerChoice(2)">Squirtle</button>
+                <img src="img/char.png" alt="charmander">
+                <button  class="choice" onclick="playerChoice('char')">Charmander</button>
+                <img src="img/pika.png" alt="pikachu">
+                <button class="choice" onclick="playerChoice('pika')">Pikachu</button>
+                <img src="img/squirt.png" alt="squirtle">
+                <button class="choice" onclick="playerChoice('squirt')">Squirtle</button>
             </div>
         </div>
     </section>
